# cody3_bot

./: .env  Cargo.toml  README.md
json/: errors.json  help.json  ship.json  version.json
src/: main.rs
src/commands/: channel.rs  err.rs  file.rs  help.rs  mod.rs  ping.rs  ratatui.rs  ship.rs  ver.rs
